--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Easy Car Rental Privat Limited</title>
+    <title>Easy Car Rental Service</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+
 </head>
 <body>
+<script src="assets/js/jquery-3.6.1.min.js"></script>
+<script src="assets/js/bootstrap.js"></script>
+
 
 </body>
 </html>
