--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,10 +5,146 @@
     <title>Easy Car Rental Service</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+        body{
+            background: #4b4b4b;
+            font-family: 'Roboto', sans-serif;
+        }
+        .card{
+            width: 250px;
+            border-radius: 10px;
+        }
+
+        .card-img-top{
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
+        }
+        span.text-muted{
+            font-size: 12px;
+        }
+        small.text-muted{
+            font-size: 8px;
+        }
+        h5.mb-0{
+            font-size: 1rem;
+        }
+        small.ghj{
+            font-size: 9px;
+        }
+        h6.ml-1{
+            font-size: 13px;
+        }
+        small.key{
+            text-decoration: underline;
+            font-size: 9px;
+            cursor: pointer;
+        }
+        .btn-danger{
+            color: #FFCBD2;
+        }
+        .btn-danger:focus{
+            box-shadow: none;
+        }
+        small.justify-content-center{
+            font-size: 9px;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+
+        @media screen and (max-width:600px){
+            .col-sm-4{
+                margin-bottom: 50px;
+            }
+        }
+    </style>
+
 </head>
 <body>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.js"></script>
+
+<!--navBar-->
+<nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <div class="container">
+        <a class="navbar-brand" href="#">EasyCar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                011-2332331
+            </span>
+        </div>
+    </div>
+</nav>
+
+<!--CarList-->
+<div class="container-fluid d-flex justify-content-center">
+    <div class="row mt-4">
+        <div class="col-sm-4">
+            <div class="card">
+                <img src="assets/images/Genaral/alto-m/alto-m%20(1).jpg" class="card-img-top" width="100%">
+                <div class="card-body pt-0 px-0">
+                    <div class="d-flex flex-row justify-content-between mb-0 px-3 mt-1">
+                        <div class="d-flex flex-column"><span class="text-muted">Price Per Day:<br><small class="text-muted">100KM</small></span></span></div>
+                        <h6>Rs2,500</h6>
+                    </div>
+                    <div class="d-flex flex-row justify-content-between mb-0 px-3">
+                        <div class="d-flex flex-column"><span class="text-muted">Price Per Month:<br><small class="text-muted">2400KM</small></span></div>
+                        <h6>Rs64,350</h6>
+                    </div>
+                    <div class="d-flex flex-row justify-content-between mb-0 px-3">
+                        <div class="d-flex flex-column"><span class="text-muted">Price Per extra KM:</span></div>
+                        <h6>Rs30</h6>
+                    </div>
+                    <hr class="mt-2 mx-3">
+                    <div class="d-flex flex-row justify-content-between px-3">
+                        <div class="d-flex flex-column"><span class="text-muted">Brand:</span></div>
+                        <div class="d-flex flex-column"><h5 class="mb-0">Suzuki</h5></div>
+                    </div>
+                    <div class="d-flex flex-row justify-content-between px-3 ">
+                        <div class="d-flex flex-column"><span class="text-muted">Model:</span></div>
+                        <div class="d-flex flex-column"><h5 class="mb-0">Alto</h5></div>
+                    </div>
+                    <div class="d-flex flex-row justify-content-between px-3 ">
+                        <div class="d-flex flex-column"><span class="text-muted">No of passengers:</span></div>
+                        <div class="d-flex flex-column"><h5 class="mb-0">4</h5></div>
+                    </div>
+                    <div class="d-flex flex-row justify-content-between px-3 ">
+                        <div class="d-flex flex-column"><span class="text-muted">Transmission type:</span></div>
+                        <div class="d-flex flex-column"><h5 class="mb-0">Auto</h5></div>
+                    </div>
+                    <div class="d-flex flex-row justify-content-between px-3 ">
+                        <div class="d-flex flex-column"><span class="text-muted">Fuel type:</span></div>
+                        <div class="d-flex flex-column"><h5 class="mb-0">Petrol</h5></div>
+                    </div>
+<!--                    <div class="d-flex flex-row justify-content-between p-3 mid">-->
+<!--                        <div class="d-flex flex-column"><small class="text-muted mb-1">Daily Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/iPtsG7I.png" width="35px" height="25px"><div class="d-flex flex-column ml-1"><small class="ghj">1.4L MultiAir</small><small class="ghj">16V I-4 Turbo</small></div></div></div>-->
+<!--                        <div class="d-flex flex-column"><small class="text-muted mb-2">Monthly Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/J11mEBq.png"><h6 class="ml-1">135 hp&ast;</h6></div></div>-->
+<!--                    </div>-->
+<!--                    <small class="text-muted key pl-3">Standard key Features</small>-->
+                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btn btn-warning btn-block"><small>Rent</small></button></div>
+<!--                    <small class="d-flex justify-content-center text-muted">*Legal Disclaimer</small>-->
+                </div>
+            </div>
+        </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 
 </body>
