--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Easy Car Rental Service</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/97dbc65e21.js" crossorigin="anonymous"></script>
 
     <style>
@@ -92,7 +92,7 @@
 </head>
 <body>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 
 <!--navBar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
