--- a/FrontEnd/register.html
+++ b/FrontEnd/register.html
@@ -72,6 +72,10 @@
       </div>
       <div class="col-md-6">
         <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
           <input type="email" class="form-control" id="email" name="email" required>
         </div>
