--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -49,7 +49,7 @@
     <div class="card text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Cars</h5>
-        <h1 class="display-4"><strong>00</strong></h1>
+        <h1 class="display-4"><strong>30</strong></h1>
         <i class="fa-solid fa-car  display-4 d-flex justify-content-end"></i>
       </div>
     </div>
@@ -58,7 +58,7 @@
     <div class="card text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Customers</h5>
-        <h1 class="display-4"><strong>00</strong></h1>
+        <h1 class="display-4"><strong>18</strong></h1>
         <i class="fa-solid fa-user  display-4 d-flex justify-content-end"></i>
       </div>
     </div>
@@ -67,7 +67,7 @@
     <div class="card text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Drivers</h5>
-        <h1 class="display-4"><strong>00</strong></h1>
+        <h1 class="display-4"><strong>15</strong></h1>
         <i class="fa-solid fa-person  display-4 d-flex justify-content-end"></i>
       </div>
     </div>
@@ -76,7 +76,7 @@
     <div class="card text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Bookings</h5>
-        <h1 class="display-4"><strong>00</strong></h1>
+        <h1 class="display-4"><strong>03</strong></h1>
         <i class="fa-solid fa-plus  display-4 d-flex justify-content-end"></i>
       </div>
     </div>
@@ -89,30 +89,38 @@
     <table class="table">
       <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">ID</th>
+        <th scope="col">Customer</th>
+        <th scope="col">Start Date</th>
+        <th scope="col">End Date</th>
+        <th scope="col">Total</th>
+        <th scope="col">Option</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <th scope="row">BK001</th>
+        <td>Saman</td>
+        <td>2023-02-15</td>
+        <td>2023-03-15</td>
+        <td>34000</td>
+        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>
       </tr>
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <th scope="row">BK002</th>
+        <td>Kamal</td>
+        <td>2023-02-16</td>
+        <td>2023-03-15</td>
+        <td>34000</td>
+        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>
       </tr>
       <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
+        <th scope="row">BK003</th>
+        <td>Yomal</td>
+        <td>2023-02-17</td>
+        <td>2023-03-15</td>
+        <td>34000</td>
+        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>
       </tr>
       </tbody>
     </table>
