--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!--navBar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-warning">
+<nav class="navbar shadow-sm navbar-expand-lg navbar-light bg-warning">
   <div class="container">
     <a class="navbar-brand" href="#"><img src="assets/images/LogoBlack.png" width="200" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
   <div class="mt-md-5 mb-md-5">
 <div class="row">
   <div class="col-md-3">
-    <div class="card text-dark bg-warning mb-3">
+    <div class="card shadow text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Cars</h5>
         <h1 class="display-4"><strong>30</strong></h1>
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="col-md-3">
-    <div class="card text-dark bg-warning mb-3">
+    <div class="card shadow text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Customers</h5>
         <h1 class="display-4"><strong>18</strong></h1>
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div class="col-md-3">
-    <div class="card text-dark bg-warning mb-3">
+    <div class="card shadow text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Drivers</h5>
         <h1 class="display-4"><strong>15</strong></h1>
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="col-md-3">
-    <div class="card text-dark bg-warning mb-3">
+    <div class="card shadow text-dark bg-warning mb-3">
       <div class="card-body">
         <h5 class="card-title">Bookings</h5>
         <h1 class="display-4"><strong>03</strong></h1>
@@ -86,7 +86,7 @@
 
 <!--  booking table-->
   <div>
-    <table class="table">
+    <table class="table shadow">
       <thead class="thead-dark">
       <tr>
         <th scope="col">ID</th>
